# advent-of-code

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  01-a.js  01-b.js  Cargo.toml  LICENSE  README.md  template.rs  timings.out
src/: computer.rs  day.rs  letters.rs  lib.rs  macros.rs  main.rs  next.rs  nom_util.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs  stats.rs  util.rs
src/2015/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs  test.rs
src/2016/: macros.rs  main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2016/data/: q03.data  q11b.data
src/2017/: day.rs  main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2017/data/: q09.data
src/2018/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2018/data/: q15.data  q17.data  q20.data
src/2019/: intcode.rs  main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2019/data/: q01.data
src/2020/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2021/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2022/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2023/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.py  q24.rs  q25.rs
src/2024/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs
src/2025/: main.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs
template/: main.rs  qXX.rs
