[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.33"
clap = { version = "4.5.0", features = ["color", "suggestions", "cargo"] }
color-backtrace = "0.6.1"
crossterm = "0.27.0"
custom_error = "1.9.2"
derive_more = "0.99.17"
enumset = "1.1.3"
humantime = "2.1.0"
indoc = "2.0.4"
itertools = "0.12.1"
maplit = "1.0.2"
mod_exp = "1.0.1"
nom = "7.1.3"
num-integer = "0.1.46"
num-rational = "0.4.1"
once_cell = "1.19.0"
permutohedron = "0.2.4"
range-set = "0.0.11"
rayon = "1.8.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
rust-crypto = "0.2.36"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"

[lib]
name = "aoc"

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "next"
path = "src/next.rs"

[[bin]]
name = "2015"
path = "src/2015/main.rs"

[[bin]]
name = "2016"
path = "src/2016/main.rs"

[[bin]]
name = "2017"
path = "src/2017/main.rs"

[[bin]]
name = "2018"
path = "src/2018/main.rs"

[[bin]]
name = "2019"
path = "src/2019/main.rs"

[[bin]]
name = "2020"
path = "src/2020/main.rs"

[[bin]]
name = "2021"
path = "src/2021/main.rs"

[[bin]]
name = "2022"
path = "src/2022/main.rs"

[[bin]]
name = "2023"
path = "src/2023/main.rs"

[[bin]]
name = "2024"
path = "src/2024/main.rs"

[dev-dependencies]
pretty_assertions = "1.3.0"
