[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2024"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["color", "suggestions", "cargo"] }
color-backtrace = "0.6.1"
crossterm = "0.28.1"
custom_error = "1.9.2"
derive_more = { version = "1.0.0", features = ["full"] }
enumset = "1.1.5"
hex = "0.4.3"
humantime = "2.1.0"
indoc = "2.0.5"
image = "0.25.5"
itertools = "0.13.0"
maplit = "1.0.2"
md-5 = "0.10.6"
mod_exp = "1.0.1"
nom = "7.1.3"
num-integer = "0.1.46"
num-rational = "0.4.2"
once_cell = "1.20.2"
permutohedron = "0.2.4"
range-set = "0.0.11"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"

[lib]
name = "aoc"

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "next"
path = "src/next.rs"

[[bin]]
name = "2015"
path = "src/2015/main.rs"

[[bin]]
name = "2016"
path = "src/2016/main.rs"

[[bin]]
name = "2017"
path = "src/2017/main.rs"

[[bin]]
name = "2018"
path = "src/2018/main.rs"

[[bin]]
name = "2019"
path = "src/2019/main.rs"

[[bin]]
name = "2020"
path = "src/2020/main.rs"

[[bin]]
name = "2021"
path = "src/2021/main.rs"

[[bin]]
name = "2022"
path = "src/2022/main.rs"

[[bin]]
name = "2023"
path = "src/2023/main.rs"

[[bin]]
name = "2024"
path = "src/2024/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
