[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2024"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["color", "suggestions", "cargo"] }
color-backtrace = "0.7.2"
crossterm = "0.29.0"
custom_error = "1.9.2"
derive_more = { version = "2.0.1", features = ["full"] }
enumset = "1.1.10"
hex = "0.4.3"
humantime = "2.3.0"
indoc = "2.0.5"
image = "0.25.5"
itertools = "0.14.0"
maplit = "1.0.2"
md-5 = "0.10.6"
mod_exp = "1.0.1"
nom = "8.0.0"
num-integer = "0.1.46"
num-rational = "0.4.2"
once_cell = "1.20.2"
permutohedron = "0.2.4"
range-set = "0.1.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"

[lib]
name = "aoc"

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "next"
path = "src/next.rs"

[[bin]]
name = "2015"
path = "src/2015/main.rs"

[[bin]]
name = "2016"
path = "src/2016/main.rs"

[[bin]]
name = "2017"
path = "src/2017/main.rs"

[[bin]]
name = "2018"
path = "src/2018/main.rs"

[[bin]]
name = "2019"
path = "src/2019/main.rs"

[[bin]]
name = "2020"
path = "src/2020/main.rs"

[[bin]]
name = "2021"
path = "src/2021/main.rs"

[[bin]]
name = "2022"
path = "src/2022/main.rs"

[[bin]]
name = "2023"
path = "src/2023/main.rs"

[[bin]]
name = "2024"
path = "src/2024/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
